# CHeap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  algorithms.h  alloc.h  arena.c  arena.h  array.c  array.h  base.h  builder.c  builder.h  bump.h  cassert.h  cheap.h  context.h  cstr.c  cstr.h  debug_malloc.c  debug_malloc.h  deque.c  deque.h  flist.h  hash.h  hash_set.h  hash_table.h  iter.h  linked.h  list.h  mpool.h  nalloc.c  nalloc.h  pool.h  pqueue.c  pqueue.h  queue.c  queue.h  range.h  rbtree.c  (+11 more)
internals/: alloc.h  base.h  bheap.h  byte.h  cassert.h  comp.h  deq.h  error.h  flinked.h  hash.h  iter.h  linked.h  mpool.h  nalloc.h  pair.h  rbtree.h
src/: alloc.c  arena.c  array.c  base.c  builder.c  deque.c  flist.c  hash.c  hash_set.c  hash_table.c  linked.c  list.c  mpool.c  nalloc.c  pqueue.c  queue.c  rbuff.c  set.c  span.c  stack.c  stringview.c  table.c
src/allocators/: arena.c  bump.c  pool.c
src/containers/: arena.c  array.c  builder.c  bump.c  cstr.c  deque.c  flist.c  hash_set.c  hash_table.c  list.c  pqueue.c  queue.c  range.c  rbuff.c  set.c  span.c  stack.c  string_t.c  stringview.c  table.c  vector.c
src/internals/: algorithms.c  alloc.c  base.c  bheap.c  calloc.c  cstr.c  deq.c  error.c  flinked.c  hash.c  iter.c  linked.c  mpool.c  nalloc.c  rbtree.c  span.c
